--- a/copycat/src/app/globals.css
+++ b/copycat/src/app/globals.css
@@ -16,18 +16,15 @@
   }
 }
 
-/* body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-} */
-
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+.bg-image {
+  background-image: url('../assets/header-velo_1.webp');
+  background-size: cover;
+  background-position: center;
+  min-height: 36vw;
 }
